--- a/Tutorials/PINNs/2_SimpleODE.ipynb
+++ b/Tutorials/PINNs/2_SimpleODE.ipynb
@@ -123,7 +123,7 @@
         "print(device)\n",
         "\n",
         "if device == 'cuda': \n",
-        "    print(torch.cuda.get_device_name()) \n"
+        "    print(torch.cuda.get_device_name()) "
       ]
     },
     {
@@ -217,6 +217,8 @@
         "    #Loss Boundary Condition\n",
         "    def lossBC(self,x_BC):\n",
         "      loss_BC=self.loss_function(self.forward(x_BC),f_BC(x_BC))\n",
+        "      # compare 'Boundary Value: forward(x_BC)' \n",
+        "      # and 'Analytical Solution: f_BC(x_BC)'\n",
         "      return loss_BC\n",
         "\n",
         "    #Loss Differential Equation\n",
@@ -226,11 +228,12 @@
         "      #Enable differentiation\n",
         "      f=self.forward(g)\n",
         "      f_x=autograd.grad(f,g,torch.ones([x_DE.shape[0],1]).to(device),retain_graph=True,create_graph=True)[0]\n",
-        "      # Gradient of f with respect to x_DE\n",
+        "      # Gradient of f with respect to g\n",
+        "      # Here g is x\n",
         "      loss_DE=self.loss_function(f_x,dfdx(g))\n",
+        "      # compare 'Numerical Differential Value: f_x' \n",
+        "      # and 'Analytical Differential Value: dfdx'\n",
         "      return loss_DE\n",
-        "      # f_x  is df/dx in numerical\n",
-        "      # dfdx is df/dx from DE\n",
         "      \n",
         "    def loss(self,x_BC,x_DE):\n",
         "      loss_bc=self.lossBC(x_BC)\n",
@@ -367,13 +370,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Boundary Conditions Data"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 335,
       "metadata": {
@@ -507,11 +503,6 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "I82eH55ElVSq"
       },
@@ -625,7 +616,7 @@
       ],
       "source": [
         "fig, ax1 = plt.subplots()\n",
-        "ax1.plot(xP.detach().numpy(),(f_Theory(xP)-model(xP)).detach().numpy(),color='blue',label='Real_Train')\n",
+        "ax1.plot(xP.detach().numpy(),(f_Theory(xP)-model(xP)).detach().numpy(),color='blue',label='Difference')\n",
         "ax1.set_xlabel('x',color='black')\n",
         "ax1.set_ylabel('f(x)',color='black')\n",
         "ax1.tick_params(axis='y', color='black')\n",
