更改了4的结构

--- a/Tutorials/PINNs/4_DiffusionEquation_MAC.ipynb
+++ b/Tutorials/PINNs/4_DiffusionEquation_MAC.ipynb
@@ -2,19 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
+      "metadata": {},
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jdtoscano94/Learning-PINNs-in-Pytorch-Physics-Informed-Machine-Learning/blob/main/4_DiffusionEquation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "# Problem : **Diffusion Equation**"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Problem : **Diffusion Equation**"
+        "## 1. Partial Differential Equation"
       ]
     },
     {
@@ -42,7 +39,7 @@
         "id": "Y61YA90-WIZ1"
       },
       "source": [
-        "## **Import** *Libraries*"
+        "### 1.1 **Import** *Libraries*"
       ]
     },
     {
@@ -104,7 +101,33 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## **DEF** *Function*"
+        "### 1.2 **DEF** *Function*"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### 1.2.1 定义域"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "x_min = -1.0\n",
+        "x_max =  1.0\n",
+        "t_min = 0.0\n",
+        "t_max = 1.0"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### 1.2.2 基本函数"
       ]
     },
     {
@@ -124,6 +147,40 @@
         "\n",
         "def f_Analytic(x,t):\n",
         "  return torch.exp(-t)*torch.sin(np.pi*x)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1.3 展示理论公式"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "nx = 200\n",
+        "xl=torch.linspace(x_min,x_max,nx).view(-1,1)\n",
+        "\n",
+        "nt = 100\n",
+        "tl = torch.linspace(t_min,t_max,nt).view(-1,1)\n",
+        "\n",
+        "x,t=torch.meshgrid(xl.squeeze(1),tl.squeeze(1))\n",
+        "yIC = f_IC(x,t)\n",
+        "y0 = f_Analytic(x,t)\n",
+        "\n",
+        "fig, ax1 = plt.subplots()\n",
+        "t0_idx = 0\n",
+        "tp_idx = round(2*nt/3)\n",
+        "ax1.plot(x[:,t0_idx].detach().numpy(),yIC[:,t0_idx].detach().numpy(),color='blue',label='Initial Condition')\n",
+        "ax1.plot(x[:,tp_idx].detach().numpy(),y0[:,tp_idx].detach().numpy(),color='red',label='Analytical Function')\n",
+        "ax1.set_xlabel('x',color='black')\n",
+        "ax1.set_ylabel('y',color='black')\n",
+        "ax1.tick_params(axis='y', color='black')\n",
+        "ax1.legend(loc = 'upper left')"
       ]
     },
     {
@@ -258,25 +315,6 @@
       "metadata": {},
       "source": [
         "## Generate data"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "定义域"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 17,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "x_min = -1.0\n",
-        "x_max =  1.0\n",
-        "t_min = 0.0\n",
-        "t_max = 1.0"
       ]
     },
     {
