--- a/Tutorials/PINNs/4_DiffusionEquation_MAC.ipynb
+++ b/Tutorials/PINNs/4_DiffusionEquation_MAC.ipynb
@@ -20,17 +20,17 @@
       "source": [
         "PDE :\n",
         "$$\\partial_{t} f - \\partial_{x}^2 f = S$$\n",
-        "$$S(x,t)=-e^{-t}\\left[sin(\\pi x)-\\pi^2 sin(\\pi x)\\right]$$\n",
+        "$$S(x,t)=-e^{-t}\\left(1-\\pi^2\\right)\\sin(\\pi x)$$\n",
         "$$x\\in[-1,1], t\\in[0,1]$$\n",
         "\n",
         "Initial Condition :\n",
-        "$$f(x,0)=sin(\\pi x)$$\n",
+        "$$f(x,0)=\\sin(\\pi x)$$\n",
         "\n",
         "Boundary Condition :\n",
         "$$f(-1,t)=f(1,t)=0$$\n",
         "\n",
         "Analytical Solution :\n",
-        "$$f(x,t)=e^{-t}sin(\\pi x)$$"
+        "$$f(x,t)=e^{-t}\\sin(\\pi x)$$"
       ]
     },
     {
@@ -93,8 +93,7 @@
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "#device = \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
         "\n",
-        "print(device)\n",
-        "\n"
+        "print(device)"
       ]
     },
     {
